<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btn01"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn02"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn03"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn04"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn05"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn06"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch6"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn07"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch7"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn08"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch8"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn09"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch9"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch10"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch11"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn12"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch12"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn13"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch13"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn14"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch14"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn15"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch15"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btn16"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Ch16"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </LinearLayout>


</ScrollView>